--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -32,7 +32,7 @@
             android:layout_marginBottom="30dp"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textSize="40dp" />
+            android:textSize="40sp" />
 
         <EditText
             android:id="@+id/connect_ipAddressET"
