--- a/app/src/main/res/layout/row_menu_drawer_item.xml
+++ b/app/src/main/res/layout/row_menu_drawer_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/navigation_drawer_width"
-    android:layout_height="64dp"
+    android:layout_height="72dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/margin_m"
@@ -11,9 +11,10 @@
 
     <ImageView
         android:id="@+id/row_menu_drawer_item_iv"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_info_ev3"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:src="@drawable/ic_text_to_speech"
+        android:scaleType="centerCrop"
         />
 
     <TextView
